data/derived/comb/progs/unify/prog7798.ml.out
Characters 91-104:
  | Sine e	  -> Sine(pi *. eval(e, x, y))
                           ^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
